test/corpus/main.txt
==================================================
Escape curly braces
==================================================
This is not an {{ interpolation }}
--------------------------------------------------

(text)

==================================================
Interpolation
==================================================
Empty {}
This is an {interpolation}
With a number {0}
attribute {hello.world}
item {dict[key]}
--------------------------------------------------

(text
  (replacement)
  (replacement
    argument: (identifier))
  (replacement
    argument: (integer))
  (replacement
    argument: (attribute_expression
      object: (identifier)
      attribute: (identifier)))
  (replacement
    argument: (item_expression
      object: (identifier)
      item: (item_string))))

==================================================
Interpolation with conversion
==================================================
To repr {var!r}
To string {!s}
To ascii {var!a}
--------------------------------------------------

(text
  (replacement
    argument: (identifier)
    conversion: (conversion))
  (replacement
    conversion: (conversion))
  (replacement
    argument: (identifier)
    conversion: (conversion)))

==================================================
Alignment
==================================================
{:<}
{:>}
{:=}
{:^}
{:-^}
{:<<}
{:>>}
{:^=}
{:=^}
--------------------------------------------------

(text
  (replacement
    format: (format_spec
      (align)))
  (replacement
    format: (format_spec
      (align)))
  (replacement
    format: (format_spec
      (align)))
  (replacement
    format: (format_spec
      (align)))
  (replacement
    format: (format_spec
      (align
        fill: (character))))
  (replacement
    format: (format_spec
      (align
        fill: (character))))
  (replacement
    format: (format_spec
      (align
        fill: (character))))
  (replacement
    format: (format_spec
      (align
        fill: (character))))
  (replacement
    format: (format_spec
      (align
        fill: (character)))))

==================================================
Sign
==================================================
{:+}
{:-}
{: }
--------------------------------------------------

(text
  (replacement
    format: (format_spec
      (sign)))
  (replacement
    format: (format_spec
      (sign)))
  (replacement
    format: (format_spec
      (sign))))

==================================================
Special characters
==================================================
{:z}
{:#}
{:0}
--------------------------------------------------
(text
  (replacement
    format: (format_spec))
  (replacement
    format: (format_spec))
  (replacement
    format: (format_spec
      (width
        (integer)))))

==================================================
Width
==================================================
{:10}
{:48}
{:01}
Rust specific
{:0$}
{:10$}
{:var42$}
{:width$}
--------------------------------------------------
(text
  (replacement
    format: (format_spec
      (width
        (integer))))
  (replacement
    format: (format_spec
      (width
        (integer))))
  (replacement
    format: (format_spec
      (width
        (integer))))
  (replacement
    format: (format_spec
      (width
        (parameter
          (integer)))))
  (replacement
    format: (format_spec
      (width
        (parameter
          (integer)))))
  (replacement
    format: (format_spec
      (width
        (parameter
          (identifier)))))
  (replacement
    format: (format_spec
      (width
        (parameter
          (identifier))))))

==================================================
Grouping option
==================================================
{:,}
{:_}
--------------------------------------------------
(text
  (replacement
    format: (format_spec
      (grouping_option)))
  (replacement
    format: (format_spec
      (grouping_option))))

==================================================
Float precision
==================================================
{:.2}
{:.10}
Rust specific
{:.1$}
{:.precision$}
{:.*}
--------------------------------------------------
(text
  (replacement
    format: (format_spec
      (precision
        (integer))))
  (replacement
    format: (format_spec
      (precision
        (integer))))
  (replacement
    format: (format_spec
      (precision
        (parameter
          (integer)))))
  (replacement
    format: (format_spec
      (precision
        (parameter
          (identifier)))))
  (replacement
    format: (format_spec
      (precision))))

==================================================
Presentation types
==================================================
Python types
{:b}
{:c}
{:d}
{:e}
{:E}
{:f}
{:F}
{:g}
{:G}
{:n}
{:o}
{:s}
{:x}
{:X}
{:%}
Rust types
{:?}
{:x?}
{:X?}
{:p}
--------------------------------------------------
(text
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type)))
  (replacement
    format: (format_spec
      (type))))

==================================================
Empty format specification
==================================================
{:}
{var:}
{var!r:}
--------------------------------------------------
(text
  (replacement
    format: (format_spec))
  (replacement
    argument: (identifier)
    format: (format_spec))
  (replacement
    argument: (identifier)
    conversion: (conversion)
    format: (format_spec)))
